# pythonc

./: CMakeLists.txt  LPL_and_VPL.m  SMD.m  main.c  nozzle.c  spray_inject_custom.c  spray_kh.c
Editing_bubble/: converge_spraykh.c  main.c
Trying-numpy/: CMakeLists.txt  KMEquation.py  Trying_numpy  main.c  main_2.c  numpy_example.py  testKm.py
src/: get_ambient_conditions.c  load_lag_env.c  nozzle.c  parcel_prop.c  spray_inject_custom.c  spray_kh.c  spray_rt.c  write_outfile.c
test_ref/: version_srpt
test_ref/src/: get_ambient_conditions.c  load_lag_env.c  species_table_functions.c  spray_inject_custom.c  spray_kh.c
untitled2/: CMakeLists.txt  main.c
